--- a/todo.html
+++ b/todo.html
@@ -4,14 +4,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="style.css">
+  <title>お試しTodo</title>
 </head>
 <script src="main.js"></script>
 <body>
-  <h2>目次</h2>
-  <li><a href="./todo.html">生JavaScriptでTodoアプリ作成</a></li>
-  <li>ReactでTodoアプリ作成</li>
+  <h2>Todoリスト画面</h2>>
+  <a href="./index.html">戻る</a>
 
+  
 </body>
 </html>
